# car-detailing

./: .gitignore  CUSTOMIZATIONS.md  README.md  building.md  docker-compose.yml
.github/workflows/: lambda_deployment.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.lambda  pyproject.toml  requirements.txt  reset_and_seed.sql
backend/app/: auth.py  database.py  email_send.py  email_smtp.py  lambda_handler.py  main.py  models.py  notify.py  schemas.py  seed.py  timezone.py
backend/app/crud/: bookings.py  customers.py  reviews.py  services.py
backend/app/routers/: admin.py  availability.py  blog.py  bookings.py  business.py  contact.py  customers.py  packages.py  reviews.py  services.py
frontend/: .env.example  index.html  package-lock.json  package.json  services.md
frontend/src/: App.css  App.jsx  config.js
frontend/src/components/: About.css  About.jsx  Blog.css  Blog.jsx  Contact.css  Contact.jsx  DetailedServices.css  DetailedServices.jsx  FAQ.css  FAQ.jsx  FeaturedImage.css  FeaturedImage.jsx  Footer.css  Footer.jsx  Hero.css  Hero.jsx  Navbar.css  Navbar.jsx  Process.css  Process.jsx  RequireAdmin.jsx  Reviews.css  Reviews.jsx  ScrollToTop.jsx  SectionCTAs.css  SectionCTAs.jsx  ServiceCategories.css  ServiceCategories.jsx  Services.css  Services.jsx  ServicesOverview.css  ServicesOverview.jsx  WelcomeSection.css  WelcomeSection.jsx
frontend/src/context/: CartContext.jsx  ToastContext.jsx
logo/: bussiness card file file.rar
logo/bussiness card file file/: Business CaRD-01.eps  Business CaRD.ai
scripts/: init_db.sql
(+21 files in other folders)
