[project]
name = "quality-detailing-backend"
version = "1.0.0"
description = "FastAPI backend for Quality Mobile Detailing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "email-validator==2.1.0",
    "passlib==1.7.4",
    "python-jose==3.3.0",
]

[project.optional-dependencies]
dev = []

[tool.uv]
dev-dependencies = []
